--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-
+  <title>Online Store</title>
 </head>
 
 <body>
-
   <div id="root"></div>
-
 </body>
 
 </html>
